<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WebTechFinal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addresslabel">Address :*</string>
    <string name="citylabel">City :*</string>
    <string name="statelabel">State :*</string>
    <string name="btnlabel">Search</string>

    <string-array name="state_array">
        <item value=""></item>
        <item value="AL">AL</item>
        <item value="AK">AK</item>
        <item value="AZ">AZ</item>
        <item value="AR">AR</item>
        <item value="CA">CA</item>
        <item value="CO">CO</item>
        <item value="CT">CT</item>
        <item value="DE">DE</item>
        <item value="DC">DC</item>
        <item value="FL">FL</item>
        <item value="GA">GA</item>
        <item value="HI">HI</item>
        <item value="ID">ID</item>
        <item value="IL">IL</item>
        <item value="IN">IN</item>
        <item value="IA">IA</item>
        <item value="KS">KS</item>
        <item value="KY">KY</item>
        <item value="LA">LA</item>
        <item value="ME">ME</item>
        <item value="MD">MD</item>
        <item value="MA">MA</item>
        <item value="MI">MI</item>
        <item value="MN">MN</item>
        <item value="MS">MS</item>
        <item value="MO">MO</item>
        <item value="MT">MT</item>
        <item value="NE">NE</item>
        <item value="NV">NV</item>
        <item value="NH">NH</item>
        <item value="NJ">NJ</item>
        <item value="NM">NM</item>
        <item value="NY">NY</item>
        <item value="NC">NC</item>
        <item value="ND">ND</item>
        <item value="OH">OH</item>
        <item value="OK">OK</item>
        <item value="OR">OR</item>
        <item value="PA">PA</item>
        <item value="RI">RI</item>
        <item value="SC">SC</item>
        <item value="SD">SD</item>
        <item value="TN">TN</item>
        <item value="TX">TX</item>
        <item value="UT">UT</item>
        <item value="VT">VT</item>
        <item value="VA">VA</item>
        <item value="WA">WA</item>
        <item value="WV">WV</item>
        <item value="WI">WI</item>
        <item value="WY">WY</item>
    </string-array>

    <string name="title_activity_result">ResultActivity</string>

    <string name="row1label">See more details on Zillow:</string>

    <string name="row1"></string>

    <string name="address"></string>

    <string name="prev">Previous</string>

    <string name="next">Next</string>
    <string name="facebook_app_id">595982507194872</string>

</resources>
