<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/rowlabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:gravity="center"
        android:text="@string/row1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/myaddr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:gravity="center"
        android:text="@string/address" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11" >

   <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:gravity="center"
         />
	 <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
         /> 
      <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
         />
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0.02"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/prev"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:gravity="center_horizontal"
            android:text="@string/prev" />

        <Button
            android:id="@+id/next"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:gravity="center_horizontal"
            android:text="@string/next" />

    </LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_weight="0.02"
    android:background="#F5F5F5"
    android:gravity="center" >

    <TextView
      android:layout_width="wrap_content"
       android:layout_height="40dp"
      android:id="@+id/footer2"
      android:textColor="#000"
      android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>