<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chicago"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context="com.example.webtechfinal.MainActivity"
    tools:ignore="ButtonStyle,HardcodedText" >

	<TextView
            android:name="@+id/bleh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:text="Search your property here" 
            android:textColor="#ffffff"
            />

        <TextView
            android:name="@+id/streetadresslabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:layout_weight="0.43"
            android:text="@string/addresslabel"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.46"
            android:background="@drawable/roundedboxes"
            android:hint="Enter Street Address"
            android:inputType="text" />
        
 		<TextView
 		    android:id="@+id/streeterr"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="0.51"
 		    android:textColor="#ff0000"
 		    android:textSize="15sp" />
 		
        <TextView
            android:name="@+id/citylabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"
            android:text="@string/citylabel"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/city"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:background="@drawable/roundedboxes"
            android:ems="7"
            android:hint="Enter City"
            android:inputType="text" />

		<TextView
		    android:id="@+id/cityerr"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.49"
		    android:textColor="#ff0000" />

        <TextView
            android:id="@+id/statelabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:text="@string/statelabel"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0.57"
            android:background="@drawable/roundedboxes"
            android:entries="@array/state_array"
            android:hint="Choose State"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/stateerr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ff0000"
             />

        

        <LinearLayout 
    	 android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:orientation="horizontal" 
   		 android:layout_marginTop="10dp"
   		 >

        <Button
            android:id="@+id/submitbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#b8b8b8"
            
            android:ems="5" 
            android:text="@string/btnlabel" />

        <Button
                android:id="@+id/zillowbtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:background="@drawable/zillow"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/resp"
            android:layout_marginTop="20dp"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.78"
            android:textColor="#ffffff" />

</LinearLayout>

